tests/bad/arrays/6.lat
int main () {
    int[] a = new int[10];

    for (boolean z : a)
    {
    }

    return 0;
}